# rosie

./: .gitignore  README.md  VERCEL_DEPLOY.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml
public/: index.html  manifest.json
src/: app.ts  main.ts  server.py  vite-env.d.ts
src/components/: chat-container.ts  chat-input.ts  chat-message.ts  endpoint-selector.ts  model-selector.ts  passphrase-auth.ts  pin-auth.ts  settings-panel.ts
src/services/: ai-api.ts  rosie-api.ts  storage.ts  synth-api.ts
src/types/: chat.ts
src/utils/: logger.ts
tests/: __init__.py  test_storage.py
tests/components/: passphrase-auth-dom.test.ts  passphrase-auth.test.ts
